# Cross-Model-Persona-Axes

./: .env.example  .gitignore  Makefile  README.md  commands.md  config.yaml  findings.md  pyproject.toml
configs/: full.yaml  smoke.yaml
scripts/: seed_direction_cache.py
src/mpa/: checkpoint.py  config.py  cost.py  judge.py  logging.py  paths.py  prompts.py  run.py
src/mpa/prober/: __init__.py  base.py  hf.py  vllm_lens.py
src/mpa/providers/: __init__.py  anthropic_.py  base.py  cohere_.py  google_.py  hf_local.py  openai_.py
src/mpa/stages/: _common.py  extract_vectors.py  generate_responses.py  goblin_analysis.py  project.py  sample_prompts.py  visualize.py
src/mpa/viz/: axis_emergence.py  axis_ladder.py  family_effect_size.py  family_signatures.py  heatmap.py  pca_scatter.py  per_axis_bars.py  per_layer_ridge.py  radar.py  tables.py  theme.py  trait_extremes.py
tables/: 05_axis_emergence.csv  08_trait_extremes.csv  09_family_signatures.csv  10_axis_ladder.csv
tests/: test_smoke.py
