[project]
name = "mpa"
version = "0.1.0"
description = "Cross-model persona-axis projections via a shared Gemma prober"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "torch>=2.4",
    "transformers>=4.46",
    "accelerate>=1.0",
    "datasets>=3.0",
    "pandas>=2.2",
    "pyarrow>=17",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "rich>=13.7",
    "tqdm>=4.66",
    "tenacity>=9.0",
    "httpx>=0.27",
    "openai>=1.50",
    "anthropic>=0.34",
    "google-genai>=0.3",
    "cohere>=5.10",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
fast-prober = ["vllm>=0.6", "vllm-lens"]
local-gen = ["vllm>=0.6"]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mpa"]

[tool.ruff]
line-length = 100
target-version = "py311"
